# RTOS_Stimulation_Device

./: .gitignore  CMakeLists.txt  I2Ctest.c  README.md
.cache/clangd/index/: FreeRTOS.h.9DD12C343837FC56.idx  FreeRTOSConfig.h.3255ED6926332D53.idx  address_mapped.h.306357972A699EC6.idx  addressmap.h.DE45D076A66E2E7C.idx  asm_helper.S.62292BCBF583D0D8.idx  assert.h.FA0056E128707F37.idx  audio_device.c.A6F2149C57F5B792.idx  binary_info.c.3E6BFF7F6736F45F.idx  binary_info.h.C995DAF7A526551A.idx  bit_ops_aeabi.S.E3CC906029084B46.idx  boot2_w25q080.S.A8816783CB0C8B41.idx  bootrom.c.E0E2AF736F20C87F.idx  bootrom.h.57348CD7620BE2A8.idx  cdc.h.84374661859563F8.idx  cdc_device.c.1DF498CBA922DB3B.idx  cdc_device.h.6FE6230B5D65CA23.idx  claim.c.33D1CC0264CD89C1.idx  claim.h.C1095CCC6CAEAED7.idx  clocks.c.AB908F9836E63FC8.idx  clocks.h.6AF45014EE9FA5E3.idx  clocks.h.BF5A7A65877E8CDB.idx  clocks.h.F2D9FBC4CE17881B.idx  code.h.AE7254C3CFF91F96.idx  compile_time_choice.S.3701F0F2B6081D8D.idx  config.h.46FFE51F216F441C.idx  config.h.5E3D0CF3801E53B0.idx  critical_section.c.F38D3337769BF9DC.idx  critical_section.h.DF8B763BC7784231.idx  croutine.c.0979DA0E75E12230.idx  croutine.h.130E88178688C3FF.idx  crt0.S.1420F21873239DDB.idx  datetime.c.BC609EFC361A7C5F.idx  datetime.h.1FCEA3C78F50D4C4.idx  dcd.h.FC8D8D7CFECB12B0.idx  dcd_rp2040.c.9F12AB714B8DC1C9.idx  defs.h.9EF2C6771953F59D.idx  deprecated_definitions.h.A3CC64C1E6C3D540.idx  dfu_device.c.305A115262999323.idx  dfu_rt_device.c.02EBEF5AC421245F.idx  divider.S.A0D3A197D5C8B90D.idx  (+187 more)
OLD/: alt_CMakeLists.txt
OLD/c_rtos_old/: CMakeLists.txt
OLD/c_rtos_old/src/: CMakeLists.txt
OLD/ninja_compiled_blink/: CMakeLists.txt
OLD/old_c_rtos/: OLD.c
c_rtos/: CMakeLists.txt  main.c
c_rtos/src/: CMakeLists.txt
c_tests/pico_usb_test/: CMakeLists.txt
doc/CAD/: RPI_v2_Printable.3MF
micropython_tests/: Bluetooth_debug.py  I2C_loop_test.py  I2C_scan.py
react_app/: .gitignore  app.json  package-lock.json  package.json
react_app/.expo/types/: router.d.ts
react_app/app/: _layout.tsx
react_app/app/(tabs)/: _layout.tsx  device.tsx  four_settings.tsx  index.tsx  settings.tsx  three_device.tsx  trends.tsx  two_trends.tsx
react_app/components/: MainMenu.tsx
react_app/constants/: BLEConstants.ts
react_app/hooks/: usePostureData.ts
react_app/patches/: react-native-chart-kit+6.12.0.patch
react_app/services/: BLEContext.tsx  BLEService.ts
src/: CMakeLists.txt  Kalman_filter.h  ble_server.c  ble_server.h  btstack_config.h  evaluation.h  flash_storage.c  flash_storage.h  kalman_filter.c  lwipopts.h  main.c  main2.c  posture_monitor.gatt  server_common.c  server_common.h  temp_sensor.gatt
test/c_tests/blink_test/: CMakeLists.txt  main.c
test/c_tests/pico_usb_test/: CMakeLists.txt  usb_test.c
test/micropython_tests/: I2C_loop_test.py  I2C_scan.py
tests/micropython_tests/: MicroPythonMain.py  ble_advertising.py
